[package]
name = "rustcp"
version = "0.1.0"
authors = ["Sebastian Majewski <ccie18643@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["log"]
log = []

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
byteorder = "1.4.3"
utuntap = "0.2.4"
internet-checksum = "0.1.0"
filedescriptor = "0.8.1"
itertools = "0.10.1"

[[bin]]
name = "rustcp"
path = "src/main.rs"
